--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 </head>
 <body>
     <div class="pedido">
-        <h2>A casa caiu mané</h2>
-        <h2>Um beijo ou um tiro misterioso? 🔫</h2>
+        <h2 class="primeiro">A casa caiu mané</h2>
+        <h2 class="segundo">Um beijo ou um tiro misterioso? 🔫</h2>
         <a href="https://www.youtube.com/watch?v=DJnbSt471jY"target="_blank" class="externo"><button class="btn">Beijo</button></a>
         <button class="btn" onclick="fuja(this)">Tiro</button>
     </div>
-<footer> <p> Feito por <a href="site-link/index.html" > Gracielle Souza </a> </p></footer>
+<footer> <p> Feito por <a href="site-link/index.html" > Gracielle Souza ☾ </a> </p></footer>
 </body>
 </html>
